fixing bug.
